--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.8",
+        "inertiajs/inertia-laravel": "^0.6.11",
         "laravel/framework": "^8.75",
+        "laravel/jetstream": "^2.9",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5"
     },
